# dhc

./: .gitignore  .gitmodules  .lvimrc  .rustfmt.toml  .travis.yml  .ycm_extra_conf.py  Cargo.toml  README.md  build.bfg  dhc.sln  meson.build
.cargo/: config
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build.yml
cross/: README.md  cross-x86.txt  cross-x86_64.txt  meson.build  setup.sh
dhc/: Cargo.toml  build.rs  cbindgen.toml  dhc.cpp  dhc.h  dhc.vcxproj  dhc.vcxproj.filters  dinput.cpp  dinput.h  logging.cpp  logging.h  macros.h  thread_annotations.h  timer.h  types.h  util.cpp  utils.cpp  utils.h  xinput.cpp  xinput.h
dhc/backend/: dinput.cpp  dinput.h  input_provider.h
dhc/frontend/: dinput.cpp  dinput.h  ps4.cpp  ps4.h  xinput.cpp  xinput.h
dhc/include/dhc/: dhc.h  logging.h
dhc/src/: bin.rs  config.rs  ffi.rs  inputs.rs  lib.rs  logger.rs  unwind.rs
dhc/src/input/: hid.rs  mod.rs  types.rs  xinput.rs
dhc/src/rawinput/: hid.rs  mod.rs
dinput8/: dhc_dinput.h  dinput.cpp  dinput8.cpp  dinput8.def  dinput8.vcxproj  dinput8.vcxproj.filters  ps4.cpp  utils.cpp  utils.h
input_test/: input_test.cpp
test/: dhc_test.cpp  dinput_test.cpp
toolchain/: toolchain-clang-i686.bfg  toolchain-clang-i686.txt  toolchain-clang-x86_64.bfg  toolchain-clang-x86_64.txt  toolchain-gcc-i686.bfg  toolchain-gcc-i686.txt  toolchain-gcc-x86_64.bfg
xinput1_3/: xinput1_3.cpp  xinput1_3.def  xinput1_3.vcxproj  xinput1_3.vcxproj.filters
