[package]
name = "dhc"
version = "0.2.2"
authors = ["Josh Gao <josh@jmgao.dev>"]
edition = "2018"

description = "XInput/rawinput abstraction library for Win32"
homepage = "https://github.com/jmgao/dhc"
documentation = "https://docs.rs/dhc"
repository = "https://github.com/jmgao/dhc"
readme = "../README.md"
keywords = ["xinput", "rawinput", "directinput", "win32"]
categories = ["game-engines", "os::windows-apis"]
license = "Apache-2.0"

[badges]
circle-ci = { repository = "jmgao/hwndloop" }
maintenance = { status = "actively-developed" }

[build-dependencies]
vergen = "5.1.0"

[dependencies]
log = "0.4.6"
slog = "2.4.1"
slog-scope = "4.1.1"
slog-stdlog = "4.0.0"
slog-stream = "1.2.1"
slog-term = "2.4.0"

log-panics = "2.0.0"

lazy_static = "1.2.0"
parking_lot = { version = "0.10" }
triple_buffer = "5.0.0"
twoway = "0.2.0"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
indoc = "0.3"

winapi = { version = "0.3", features = ["winuser", "handleapi", "hidpi", "hidsdi"] }
hwndloop = "0.1.5"
rusty-xinput = { version = "1.2.0", path = "../rusty-xinput" }

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "dhc"
path = "src/bin.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
